--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <a href="./index.html" class="logo link"
             >Web<span class="accent">Studio</span></a
           >
+
           <ul class="nav-list list">
             <li>
               <a class="nav-menu-item current link" href="./index.html"
@@ -37,7 +38,7 @@
               >
             </li>
             <li>
-              <a class="nav-menu-item link" href="">Contacts</a>
+              <a class="nav-menu-item link" href="#">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -55,13 +56,22 @@
             </li>
           </ul>
         </address>
+        <button
+          class="menu-toggle js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg class="icon-mobile-menu" width="24" height="24">
+            <use href="./images/icons.svg#mobile-menu"></use>
+          </svg>
+        </button>
       </div>
     </header>
 
     <main>
       <section class="hero-section">
         <div class="container">
-          <h1 class="title">Effective Solutions for Your Business</h1>
+          <h1 class="title title-h1">Effective Solutions for Your Business</h1>
           <button type="button" class="order-service-button" data-modal-open>
             Order Service
           </button>
@@ -80,7 +90,7 @@
                 </svg>
               </div>
               <h3 class="strategy-section-title">Strategy</h3>
-              <p class="strategy-section-text">
+              <p class="strategy-section-text text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
@@ -92,7 +102,7 @@
                 </svg>
               </div>
               <h3 class="strategy-section-title">Punctuality</h3>
-              <p class="strategy-section-text">
+              <p class="strategy-section-text text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
@@ -104,7 +114,7 @@
                 </svg>
               </div>
               <h3 class="strategy-section-title">Diligence</h3>
-              <p class="strategy-section-text">
+              <p class="strategy-section-text text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
@@ -116,7 +126,7 @@
                 </svg>
               </div>
               <h3 class="strategy-section-title">Technologies</h3>
-              <p class="strategy-section-text">
+              <p class="strategy-section-text text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
@@ -127,7 +137,7 @@
 
       <section class="product-section">
         <div class="container">
-          <h2 class="product-section-title">What are we doing</h2>
+          <h2 class="product-section-title title-h2">What are we doing</h2>
           <ul class="product-section-list list">
             <li class="product-section-item">
               <img
@@ -156,7 +166,7 @@
 
       <section class="team-section">
         <div class="container">
-          <h2 class="team-section-title">Our Team</h2>
+          <h2 class="team-section-title title-h2">Our Team</h2>
           <ul class="team-section-list list">
             <li class="team-cards-item">
               <img
@@ -165,8 +175,8 @@
                 width="264"
               />
               <div class="team-cards">
-                <h3 class="team-cards-title">Mark Guerrero</h3>
-                <p class="team-cards-text">Product Designer</p>
+                <h3 class="team-cards-title title-h3">Mark Guerrero</h3>
+                <p class="team-cards-text text">Product Designer</p>
 
                 <ul class="social-icons-list list">
                   <li class="social-icons-item">
@@ -203,8 +213,8 @@
             <li class="team-cards-item">
               <img src="./images/main/foto2.jpg" alt="Tom Ford" width="264" />
               <div class="team-cards">
-                <h3 class="team-cards-title">Tom Ford</h3>
-                <p class="team-cards-text">Frontend Developer</p>
+                <h3 class="team-cards-title title-h3">Tom Ford</h3>
+                <p class="team-cards-text text">Frontend Developer</p>
                 <ul class="social-icons-list list">
                   <li class="social-icons-item">
                     <a href="" class="social-link link">
@@ -244,8 +254,8 @@
                 width="264"
               />
               <div class="team-cards">
-                <h3 class="team-cards-title">Camila Garcia</h3>
-                <p class="team-cards-text">Marketing</p>
+                <h3 class="team-cards-title title-h3">Camila Garcia</h3>
+                <p class="team-cards-text text">Marketing</p>
                 <ul class="social-icons-list list">
                   <li class="social-icons-item">
                     <a href="" class="social-link link">
@@ -285,8 +295,8 @@
                 width="264"
               />
               <div class="team-cards">
-                <h3 class="team-cards-title">Daniel Wilson</h3>
-                <p class="team-cards-text">UI Designer</p>
+                <h3 class="team-cards-title title-h3">Daniel Wilson</h3>
+                <p class="team-cards-text text">UI Designer</p>
                 <ul class="social-icons-list list">
                   <li class="social-icons-item">
                     <a href="" class="social-link link">
@@ -324,7 +334,7 @@
       </section>
       <section class="customers-section">
         <div class="container">
-          <h2 class="customers-title">Customers</h2>
+          <h2 class="customers-title title-h2">Customers</h2>
           <ul class="customers-list list">
             <li class="customers-item">
               <a class="customers-link" href="">
@@ -379,13 +389,13 @@
           <a href="./index.html" class="footer-logo link"
             >Web<span class="accent-footer">Studio</span></a
           >
-          <p class="footer-text">
+          <p class="footer-text text">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
           </p>
         </div>
         <div class="footer-tab-social">
-          <p class="social-text">Social media</p>
+          <p class="social-text text">Social media</p>
           <ul class="footer-icons-list list">
             <li class="social-icons-item">
               <a href="" class="social-footer-link link">
@@ -418,7 +428,7 @@
           </ul>
         </div>
         <div class="footer-subscribe">
-          <p class="footer-subscribe-text">Subscribe</p>
+          <p class="footer-subscribe-text text">Subscribe</p>
           <form class="footer-subscribe-form">
             <label class="subscribe-email-label">
               <input
@@ -446,7 +456,9 @@
             <use href="./images/icons.svg#close"></use>
           </svg>
         </button>
-        <p class="form-text">Leave your contacts and we will call you back</p>
+        <p class="form-text text">
+          Leave your contacts and we will call you back
+        </p>
         <form class="form-container">
           <div class="fields">
             <label class="field-lable" for="user-name"> Name </label>
@@ -511,6 +523,68 @@
         </form>
       </div>
     </div>
+
+    <div class="mobile-container js-menu-container" id="mobile-menu">
+      <button class="mobile-close-button js-close-menu" type="button">
+        <svg class="close-icon" width="8" height="8">
+          <use href="./images/icons.svg#close"></use>
+        </svg>
+      </button>
+      <ul class="mobile-nav list">
+        <li>
+          <a class="mobile-nav-item link active" href="./index.html">Studio</a>
+        </li>
+        <li>
+          <a class="mobile-nav-item link" href="./portfolio.html">Portfolio</a>
+        </li>
+        <li>
+          <a class="mobile-nav-item link" href="">Contacts</a>
+        </li>
+      </ul>
+      <ul class="mobile-contacts list">
+        <li class="mobile-contacts-item">
+          <a class="link" href="tel:+110001111111" target="_blank"
+            >+11 (000) 111-11-11</a
+          >
+        </li>
+        <li>
+          <a class="link" href="mailto:info@devstudio.com" target="_blank"
+            >info@devstudio.com</a
+          >
+        </li>
+      </ul>
+      <ul class="mobile-social list">
+        <li class="mobile-social-item">
+          <a class="link" href="https://www.instagram.com/" target="_blank">
+            <svg class="icon-menu" width="24" height="24">
+              <use href="./images/icons.svg#instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mobile-social-item">
+          <a class="link" href="https://twitter.com/" target="_blank">
+            <svg class="icon-menu" width="24" height="24">
+              <use href="./images/icons.svg#twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mobile-social-item">
+          <a class="link" href="https://facebook.com/" target="_blank">
+            <svg class="icon-menu" width="24" height="24">
+              <use href="./images/icons.svg#facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mobile-social-item">
+          <a class="link" href="https://www.linkedin.com/" target="_blank">
+            <svg class="icon-menu" width="24" height="24">
+              <use href="./images/icons.svg#linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
