--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,15 @@
           <a href="./index.html" class="logo link"
             >Web<span class="accent">Studio</span></a
           >
+          <button
+            class="menu-toggle js-open-menu"
+            aria-expanded="false"
+            aria-controls="mobile-menu"
+          >
+            <svg class="icon-mobile-menu" width="32" height="22">
+              <use href="./images/icons.svg#mobile-menu"></use>
+            </svg>
+          </button>
           <ul class="nav-list list">
             <li>
               <a class="nav-menu-item link" href="./index.html">Studio</a>
@@ -55,7 +64,7 @@
     <main>
       <section class="portfolio-section">
         <div class="container">
-          <h1 class="visually-hidden">Product section</h1>
+          <h1 class="title-h1 visually-hidden">Product section</h1>
           <ul class="filter-button-list list">
             <li><button class="filter-button" type="button">All</button></li>
             <li>
@@ -72,9 +81,16 @@
               <a class="product-link link" href="#">
                 <div class="overlay-card">
                   <img
-                    src="./images/portfolio/bankingapp.jpg"
+                    src="./images/portfolio/bankingapp-desk.jpg"
+                    srcset="
+                      ./images/portfolio/bankingapp-mob.jpg   360w,
+                      ./images/portfolio/bankingapp-tab.jpg   768w,
+                      ./images/portfolio/bankingapp-desk.jpg 1158w
+                    "
                     alt="Banking App"
-                    width="360"
+                    sizes="(max-width: 767px) 360px,
+         (max-width: 1157px) 768px,
+         1158px"
                   />
 
                   <p class="overlay">
@@ -84,8 +100,10 @@
                   </p>
                 </div>
                 <div class="product-card">
-                  <h2 class="product-title">Banking App Interface Concept</h2>
-                  <p class="product-text">App</p>
+                  <h2 class="product-title title-h3">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="product-text text">App</p>
                 </div>
               </a>
             </li>
@@ -93,9 +111,16 @@
               <a class="product-link link" href="#">
                 <div class="overlay-card">
                   <img
-                    src="./images/portfolio/cashlesspayment.jpg"
+                    src="./images/portfolio/cashlesspayment-desk.jpg"
+                    srcset="
+                      ./images/portfolio/cashlesspayment-mob.jpg   360w,
+                      ./images/portfolio/cashlesspayment-tab.jpg   768w,
+                      ./images/portfolio/cashlesspayment-desk.jpg 1158w
+                    "
                     alt="Cashless Payment"
-                    width="360"
+                    sizes="(max-width: 767px) 360px,
+         (max-width: 1157px) 768px,
+         1158px"
                   />
 
                   <p class="overlay">
@@ -105,8 +130,8 @@
                   </p>
                 </div>
                 <div class="product-card">
-                  <h2 class="product-title">Cashless Payment</h2>
-                  <p class="product-text">Marketing</p>
+                  <h2 class="product-title title-h3">Cashless Payment</h2>
+                  <p class="product-text text">Marketing</p>
                 </div>
               </a>
             </li>
@@ -114,9 +139,16 @@
               <a class="product-link link" href="#">
                 <div class="overlay-card">
                   <img
-                    src="./images/portfolio/mediationapp.jpg"
+                    src="./images/portfolio/mediationapp-desk.jpg"
+                    srcset="
+                      ./images/portfolio/mediationapp-mob.jpg   360w,
+                      ./images/portfolio/mediationapp-tab.jpg   768w,
+                      ./images/portfolio/mediationapp-desk.jpg 1158w
+                    "
                     alt="Mediation App"
-                    width="360"
+                    sizes="(max-width: 767px) 360px,
+         (max-width: 1157px) 768px,
+         1158px"
                   />
 
                   <p class="overlay">
@@ -126,8 +158,8 @@
                   </p>
                 </div>
                 <div class="product-card">
-                  <h2 class="product-title">Meditation App</h2>
-                  <p class="product-text">App</p>
+                  <h2 class="product-title title-h3">Meditation App</h2>
+                  <p class="product-text text">App</p>
                 </div>
               </a>
             </li>
@@ -135,9 +167,16 @@
               <a class="product-link link" href="#">
                 <div class="overlay-card">
                   <img
-                    src="./images/portfolio/taxiservice.jpg"
+                    src="./images/portfolio/taxiservice-desk.jpg"
+                    srcset="
+                      ./images/portfolio/taxiservice-mob.jpg   360w,
+                      ./images/portfolio/taxiservice-tab.jpg   768w,
+                      ./images/portfolio/taxiservice-desk.jpg 1158w
+                    "
                     alt="Taxi Service"
-                    width="360"
+                    sizes="(max-width: 767px) 360px,
+         (max-width: 1157px) 768px,
+         1158px"
                   />
 
                   <p class="overlay">
@@ -147,8 +186,8 @@
                   </p>
                 </div>
                 <div class="product-card">
-                  <h2 class="product-title">Taxi Service</h2>
-                  <p class="product-text">Marketing</p>
+                  <h2 class="product-title title-h3">Taxi Service</h2>
+                  <p class="product-text text">Marketing</p>
                 </div>
               </a>
             </li>
@@ -156,9 +195,16 @@
               <a class="product-link link" href="#">
                 <div class="overlay-card">
                   <img
-                    src="./images/portfolio/screenillustrations.jpg"
+                    src="./images/portfolio/screenillustrations-desk.jpg"
+                    srcset="
+                      ./images/portfolio/screenillustrations-mob.jpg   360w,
+                      ./images/portfolio/screenillustrations-tab.jpg   768w,
+                      ./images/portfolio/screenillustrations-desk.jpg 1158w
+                    "
                     alt="Screen Illustrations"
-                    width="360"
+                    sizes="(max-width: 767px) 360px,
+         (max-width: 1157px) 768px,
+         1158px"
                   />
 
                   <p class="overlay">
@@ -168,8 +214,8 @@
                   </p>
                 </div>
                 <div class="product-card">
-                  <h2 class="product-title">Screen Illustrations</h2>
-                  <p class="product-text">Design</p>
+                  <h2 class="product-title title-h3">Screen Illustrations</h2>
+                  <p class="product-text text">Design</p>
                 </div>
               </a>
             </li>
@@ -177,9 +223,16 @@
               <a class="product-link link" href="#">
                 <div class="overlay-card">
                   <img
-                    src="./images/portfolio/onlinecourses.jpg"
+                    src="./images/portfolio/onlinecourses-desk.jpg"
+                    srcset="
+                      ./images/portfolio/onlinecourses-mob.jpg   360w,
+                      ./images/portfolio/onlinecourses-tab.jpg   768w,
+                      ./images/portfolio/onlinecourses-desk.jpg 1158w
+                    "
                     alt="Online Courses"
-                    width="360"
+                    sizes="(max-width: 767px) 360px,
+         (max-width: 1157px) 768px,
+         1158px"
                   />
 
                   <p class="overlay">
@@ -189,8 +242,8 @@
                   </p>
                 </div>
                 <div class="product-card">
-                  <h2 class="product-title">Online Courses</h2>
-                  <p class="product-text">Marketing</p>
+                  <h2 class="product-title title-h3">Online Courses</h2>
+                  <p class="product-text text">Marketing</p>
                 </div>
               </a>
             </li>
@@ -198,9 +251,16 @@
               <a class="product-link link" href="#">
                 <div class="overlay-card">
                   <img
-                    src="./images/portfolio/instagramstories.jpg"
+                    src="./images/portfolio/instagramstories-desk.jpg"
+                    srcset="
+                      ./images/portfolio/instagramstories-mob.jpg   360w,
+                      ./images/portfolio/instagramstories-tab.jpg   768w,
+                      ./images/portfolio/instagramstories-desk.jpg 1158w
+                    "
                     alt="Instagram Stories"
-                    width="360"
+                    sizes="(max-width: 767px) 360px,
+         (max-width: 1157px) 768px,
+         1158px"
                   />
 
                   <p class="overlay">
@@ -210,8 +270,10 @@
                   </p>
                 </div>
                 <div class="product-card">
-                  <h2 class="product-title">Instagram Stories Concept</h2>
-                  <p class="product-text">Design</p>
+                  <h2 class="product-title title-h3">
+                    Instagram Stories Concept
+                  </h2>
+                  <p class="product-text text">Design</p>
                 </div>
               </a>
             </li>
@@ -219,9 +281,16 @@
               <a class="product-link link" href="#">
                 <div class="overlay-card">
                   <img
-                    src="./images/portfolio/organicfood.jpg"
+                    src="./images/portfolio/organicfood-desk.jpg"
+                    srcset="
+                      ./images/portfolio/organicfood-mob.jpg   360w,
+                      ./images/portfolio/organicfood-tab.jpg   768w,
+                      ./images/portfolio/organicfood-desk.jpg 1158w
+                    "
                     alt="Organic Food"
-                    width="360"
+                    sizes="(max-width: 767px) 360px,
+         (max-width: 1157px) 768px,
+         1158px"
                   />
 
                   <p class="overlay">
@@ -231,8 +300,8 @@
                   </p>
                 </div>
                 <div class="product-card">
-                  <h2 class="product-title">Organic Food</h2>
-                  <p class="product-text">Web Site</p>
+                  <h2 class="product-title title-h3">Organic Food</h2>
+                  <p class="product-text text">Web Site</p>
                 </div>
               </a>
             </li>
@@ -240,9 +309,16 @@
               <a class="product-link link" href="#">
                 <div class="overlay-card">
                   <img
-                    src="./images/portfolio/freshcoffee.jpg"
+                    src="./images/portfolio/freshcoffee-desk.jpg"
+                    srcset="
+                      ./images/portfolio/freshcoffee-mob.jpg   360w,
+                      ./images/portfolio/freshcoffee-tab.jpg   768w,
+                      ./images/portfolio/freshcoffee-desk.jpg 1158w
+                    "
                     alt="Fresh Coffee"
-                    width="360"
+                    sizes="(max-width: 767px) 360px,
+         (max-width: 1157px) 768px,
+         1158px"
                   />
 
                   <p class="overlay">
@@ -252,8 +328,8 @@
                   </p>
                 </div>
                 <div class="product-card">
-                  <h2 class="product-title">Fresh Coffee</h2>
-                  <p class="product-text">Web Site</p>
+                  <h2 class="product-title title-h3">Fresh Coffee</h2>
+                  <p class="product-text text">Web Site</p>
                 </div>
               </a>
             </li>
@@ -267,13 +343,13 @@
           <a href="./index.html" class="footer-logo link"
             >Web<span class="accent-footer">Studio</span></a
           >
-          <p class="footer-text">
+          <p class="footer-text text">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
           </p>
         </div>
         <div class="footer-tab-social">
-          <p class="social-text">Social media</p>
+          <p class="social-text text">Social media</p>
           <ul class="footer-icons-list list">
             <li class="social-icons-item">
               <a href="" class="social-footer-link link">
@@ -306,7 +382,7 @@
           </ul>
         </div>
         <div class="footer-subscribe">
-          <p class="footer-subscribe-text">Subscribe</p>
+          <p class="footer-subscribe-text text">Subscribe</p>
           <form class="footer-subscribe-form">
             <label class="subscribe-email-label">
               <input
@@ -326,5 +402,90 @@
         </div>
       </div>
     </footer>
+    <div class="mobile-container js-menu-container" id="mobile-menu">
+      <button class="close-button js-close-menu" type="button">
+        <svg class="close-icon" width="8" height="8">
+          <use href="./images/icons.svg#close"></use>
+        </svg>
+      </button>
+      <ul class="mobile-nav list">
+        <li>
+          <a class="mobile-nav-item link" href="./index.html">Studio</a>
+        </li>
+        <li>
+          <a class="mobile-nav-item link active" href="./portfolio.html"
+            >Portfolio</a
+          >
+        </li>
+        <li>
+          <a class="mobile-nav-item link" href="">Contacts</a>
+        </li>
+      </ul>
+      <ul class="mobile-contacts list">
+        <li>
+          <a
+            class="mobile-contacts-item link"
+            href="mailto:info@devstudio.com"
+            target="_blank"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a
+            class="mobile-contacts-item link"
+            href="tel:+110001111111"
+            target="_blank"
+            >+11 (000) 111-11-11</a
+          >
+        </li>
+      </ul>
+      <ul class="mobile-social list">
+        <li class="">
+          <a
+            class="mobile-social-item link"
+            href="https://www.instagram.com/"
+            target="_blank"
+          >
+            <svg class="icon-menu-container" width="24" height="24">
+              <use href="./images/icons.svg#instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="">
+          <a
+            class="mobile-social-item link"
+            href="https://twitter.com/"
+            target="_blank"
+          >
+            <svg class="icon-menu-container" width="24" height="24">
+              <use href="./images/icons.svg#twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="">
+          <a
+            class="mobile-social-item link"
+            href="https://facebook.com/"
+            target="_blank"
+          >
+            <svg class="icon-menu-container" width="24" height="24">
+              <use href="./images/icons.svg#facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="">
+          <a
+            class="mobile-social-item link"
+            href="https://www.linkedin.com/"
+            target="_blank"
+          >
+            <svg class="icon-menu-container" width="24" height="24">
+              <use href="./images/icons.svg#linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
