--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
       </div>
     </header>
     <main>
-      <section class="portfolio-section">
+      <section class="portfolio">
         <div class="container">
           <h1 class="title-h1 visually-hidden">Product section</h1>
           <ul class="filter-button-list list">
@@ -403,33 +403,24 @@
       </div>
     </footer>
     <div class="mobile-container js-menu-container" id="mobile-menu">
-      <button class="close-button js-close-menu" type="button">
+      <button class="mobile-close-button js-close-menu" type="button">
         <svg class="close-icon" width="8" height="8">
           <use href="./images/icons.svg#close"></use>
         </svg>
       </button>
       <ul class="mobile-nav list">
         <li>
-          <a class="mobile-nav-item link" href="./index.html">Studio</a>
+          <a class="mobile-nav-item link active" href="./index.html">Studio</a>
         </li>
         <li>
-          <a class="mobile-nav-item link active" href="./portfolio.html"
-            >Portfolio</a
-          >
+          <a class="mobile-nav-item link" href="./portfolio.html">Portfolio</a>
         </li>
         <li>
           <a class="mobile-nav-item link" href="">Contacts</a>
         </li>
       </ul>
+
       <ul class="mobile-contacts list">
-        <li>
-          <a
-            class="mobile-contacts-item link"
-            href="mailto:info@devstudio.com"
-            target="_blank"
-            >info@devstudio.com</a
-          >
-        </li>
         <li>
           <a
             class="mobile-contacts-item link"
@@ -438,48 +429,41 @@
             >+11 (000) 111-11-11</a
           >
         </li>
-      </ul>
-      <ul class="mobile-social list">
-        <li class="">
+        <li>
           <a
-            class="mobile-social-item link"
-            href="https://www.instagram.com/"
+            class="mobile-contacts-item link"
+            href="mailto:info@devstudio.com"
             target="_blank"
+            >info@devstudio.com</a
           >
-            <svg class="icon-menu-container" width="24" height="24">
+        </li>
+      </ul>
+
+      <ul class="mobile-social list">
+        <li class="mobile-social-item">
+          <a class="link" href="https://www.instagram.com/" target="_blank">
+            <svg class="icon-menu" width="24" height="24">
               <use href="./images/icons.svg#instagram"></use>
             </svg>
           </a>
         </li>
-        <li class="">
-          <a
-            class="mobile-social-item link"
-            href="https://twitter.com/"
-            target="_blank"
-          >
-            <svg class="icon-menu-container" width="24" height="24">
+        <li class="mobile-social-item">
+          <a class="link" href="https://twitter.com/" target="_blank">
+            <svg class="icon-menu" width="24" height="24">
               <use href="./images/icons.svg#twitter"></use>
             </svg>
           </a>
         </li>
-        <li class="">
-          <a
-            class="mobile-social-item link"
-            href="https://facebook.com/"
-            target="_blank"
-          >
-            <svg class="icon-menu-container" width="24" height="24">
+        <li class="mobile-social-item">
+          <a class="link" href="https://facebook.com/" target="_blank">
+            <svg class="icon-menu" width="24" height="24">
               <use href="./images/icons.svg#facebook"></use>
             </svg>
           </a>
         </li>
-        <li class="">
-          <a
-            class="mobile-social-item link"
-            href="https://www.linkedin.com/"
-            target="_blank"
-          >
-            <svg class="icon-menu-container" width="24" height="24">
+        <li class="mobile-social-item">
+          <a class="link" href="https://www.linkedin.com/" target="_blank">
+            <svg class="icon-menu" width="24" height="24">
               <use href="./images/icons.svg#linkedin"></use>
             </svg>
           </a>
