mod aCTIVE MENU IN PORTF

--- a/portfolio.html
+++ b/portfolio.html
@@ -410,10 +410,12 @@
       </button>
       <ul class="mobile-nav list">
         <li>
-          <a class="mobile-nav-item link active" href="./index.html">Studio</a>
+          <a class="mobile-nav-item link" href="./index.html">Studio</a>
         </li>
         <li>
-          <a class="mobile-nav-item link" href="./portfolio.html">Portfolio</a>
+          <a class="mobile-nav-item link active" href="./portfolio.html"
+            >Portfolio</a
+          >
         </li>
         <li>
           <a class="mobile-nav-item link" href="">Contacts</a>
