--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
           </svg>
         </button>
         <p class="form-text text"> Leave your contacts and we will call you back </p>
-        <form class="form-container">
+        <form name="order-form" class="form-container" netlify>
           <div class="fields">
             <label class="field-lable" for="user-name"> Name </label>
             <div class="field-input">
